# deepSI-jax

./: .gitignore  LICENSE  README.md  pyproject.toml
deepSI_jax/: __init__.py  data_prep.py  models.py  networks.py  utils.py
examples/: example1_basic_usage.ipynb  example2_loss_functions.ipynb  example3_innovation_noise_filter.ipynb  example3_parallel_training.ipynb  example4_separated_noise_process_models.ipynb  example5_parallel_training.ipynb
